--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>镜湖沉石</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>镜湖沉石</title>
 </head>
 <body>
 <p>个人博客开始搭建</p>
 </body>
+</html>
